--- a/growing_cities/static/js/mapresults.handlebars
+++ b/growing_cities/static/js/mapresults.handlebars
@@ -5,8 +5,10 @@
         <img src="{{thumbnail}}" />
         {{/if}}
     </div>
-    <div class="name">{{name}}</div>
-    <div class="location">{{city}}, {{state_province}}</div>
+    <div class="details">
+        <div class="name">{{name}}</div>
+        <div class="location">{{city}}, {{state_province}}</div>
+    </div>
     <div class="clear"></div>
 </li>
 {{/each}}
