activity choices more room to breath
(helpful on longer activities)

--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -1393,6 +1393,10 @@ input[type="file"] {
     margin-top: 29px;
 }
 
+#map-drawer .chzn-container-multi .chzn-choices .search-choice {
+    line-height: 18px;
+}
+
 /*
  * timePicker
  */
