--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -1386,11 +1386,10 @@ input[type="file"] {
     -webkit-box-shadow: 0 0 0;
     -moz-box-shadow: 0 0 0;
     box-shadow: 0 0 0;
-    top: 0;
 }
 
-#map-drawer .chzn-container-multi .chzn-drop {
-    margin-top: 29px;
+#map-drawer .chzn-container-single .chzn-drop {
+    top: 0;
 }
 
 #map-drawer .chzn-container-multi .chzn-choices .search-choice {
