better map overlay positioning

--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -199,14 +199,16 @@
     </div>
 
     <div class="full-height" id="map-overlay" style="display: none;">
-        <div class="map-overlay-title">
-            Grow Where You Are
-        </div>
-        <div class="map-overlay-description">
-            Across the country, people are growing their own food. See what's growing near you.
-        </div>
-        <div class="button map-overlay-hide">
-            GO
+        <div class="map-overlay-content">
+            <div class="map-overlay-title">
+                Grow Where You Are
+            </div>
+            <div class="map-overlay-description">
+                Across the country, people are growing their own food. See what's growing near you.
+            </div>
+            <div class="button map-overlay-hide">
+                GO
+            </div>
         </div>
     </div>
 
