--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -459,10 +459,13 @@ body.loading .loading-indicator {
     cursor: default;
     overflow: auto;
     position: absolute;
+    z-index: 5000;
+}
+
+.map-overlay-content {
     padding-top: 2%;
     padding-left: 5%;
     padding-right: 5%;
-    z-index: 5000;
 }
 
 /*
