--- a/growing_cities/templates/screenings/host_screening_form.html
+++ b/growing_cities/templates/screenings/host_screening_form.html
@@ -93,5 +93,5 @@
         </div>
     </div>
 
-    <button class="action-button action-button-submit" type="submit">Submit</button>
+    <button class="action-button action-button-submit action-button-submit-small" type="submit">Submit</button>
 </form>
