--- a/growing_cities/templates/stories/story_form.html
+++ b/growing_cities/templates/stories/story_form.html
@@ -60,5 +60,5 @@
     </div>
     <div class="clear"></div>
 
-    <button class="action-button action-button-submit story-form-submit" type="submit">Submit</button>
+    <button class="action-button action-button-submit action-button-submit-small story-form-submit" type="submit">Submit</button>
 </form>
