reduce space between stories and share button

--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -764,6 +764,7 @@ body.loading .loading-indicator {
     margin-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 20px;
     width: 300px;
 }
 
