--- a/growing_cities/templates/partners/_partner_detail.html
+++ b/growing_cities/templates/partners/_partner_detail.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="partner-text">
-    {{ partner.text }}
+    {{ partner.text|safe }}
 </div>
 
 {% if 'change_partner' in perms %}
