--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -1282,6 +1282,21 @@ input[type="file"] {
     border: 1px solid #4C4A33;
 }
 
+/* Leaflet touch */
+#map .leaflet-touch .leaflet-control-zoom a {
+    height: 25px;
+    width: 25px;
+}
+
+#map .leaflet-touch .leaflet-bar-part {
+    border: 0;
+}
+
+#map .leaflet-touch .leaflet-control-layers,
+#map .leaflet-touch .leaflet-control-zoom {
+    border: 0;
+}
+
 
 /*
  * _chosen_
