--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -6,8 +6,11 @@
 	<title>{% block title %}{{ fiber_page.title }}{% endblock %}</title>
     <link rel="icon" href="{{ STATIC_URL }}img/favicon.ico" />
 
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
+
     {% compress css %}
 	<link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/mobile.css" />
 	<link rel="stylesheet" href="{{ STATIC_URL }}js/lib/chosen/chosen.css">
 	<link rel="stylesheet" href="{{ STATIC_URL }}js/lib/jcarousel/skin.css">
     {% endcompress %}
@@ -123,6 +126,10 @@
 			</div>
 
             <div id="content-wrapper" class="full-height">
+                <div id="mobile-menu-bar" class="mobile-only">
+                    <div>Growing Cities</div>
+                    <div class="meta">click for menu</div>
+                </div>
                 <div id="content" class="full-height">
                     <article>
                         {% block content %}
