hide/show menu bar when showing/hiding sidebar

--- a/growing_cities/static/css/mobile.css
+++ b/growing_cities/static/css/mobile.css
@@ -41,6 +41,9 @@
     .submenu {
         display: none;
     }
+    .sticky-wrapper {
+        display: none;
+    }
 
     .terms {
         display: none;
