--- a/growing_cities/static/css/mobile.css
+++ b/growing_cities/static/css/mobile.css
@@ -1,4 +1,9 @@
 @media (max-width: 480px) {
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+
     #sidebar {
         display: none;
         width: 90%;
