resize trailer and avoid black lines

--- a/growing_cities/templates/pages/film.html
+++ b/growing_cities/templates/pages/film.html
@@ -16,9 +16,9 @@
 
     <div class="content-section trailer">
         <h3 style="display: none;">Trailer</h3>
-        <iframe id="trailer-player" class="full-height"
+        <iframe id="trailer-player"
             src="//player.vimeo.com/video/{{ trailer.external_id }}?api=1&player_id=trailer-player&title=0&byline=0&portrait=0"
-            width="100%" frameborder="0" webkitAllowFullScreen
+            width="500" height="281" frameborder="0" webkitAllowFullScreen
             mozallowfullscreen allowFullScreen></iframe>
 
     </div>
