proper viewport content value

--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -6,7 +6,7 @@
 	<title>{% block title %}{{ fiber_page.title }}{% endblock %}</title>
     <link rel="icon" href="{{ STATIC_URL }}img/favicon.ico" />
 
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
     {% compress css %}
 	<link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
