email address placeholder

--- a/growing_cities/templates/newsletter/form.html
+++ b/growing_cities/templates/newsletter/form.html
@@ -4,7 +4,7 @@
     <div>
         {{ form.email.errors }}
         <div class="grid">
-            {{ form.email.label_tag }} {{ form.email }}
+            {{ form.email }}
         </div>
         <div class="clear"></div>
     </div>
