--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -1238,6 +1238,10 @@ input[type="file"] {
     height: 25px;
 }
 
+#map .leaflet-popup-scrolled {
+    border: 0;
+}
+
 #map .leaflet-bottom {
     z-index: 98;
 }
