center paypal form

--- a/growing_cities/templates/products/_product_detail.html
+++ b/growing_cities/templates/products/_product_detail.html
@@ -11,7 +11,9 @@
         </span>
     </div>
 
-    {{ product.paypal_button|safe }}
+    <div class="paypal-button">
+        {{ product.paypal_button|safe }}
+    </div>
 </div>
 
 {% if 'change_product' in perms %}
