--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -963,6 +963,11 @@ input[type="file"] {
     }
 }
 
+.paypal-button table {
+    text-align: center;
+    width: 100%;
+}
+
 #buy-button {
     background: #F1EFE3;
     border: 2px solid #4C4A33;
