--- a/growing_cities/templates/pages/news.html
+++ b/growing_cities/templates/pages/news.html
@@ -45,6 +45,10 @@
                 {% endfor %}
             </ul>
         </div>
+
+        <div class="news-blogroll">
+            {% show_page_content "blogroll" %}
+        </div>
     </div>
 
     <div class="grid grid-3-4 news-wordpress">
