make buy button work again

--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -989,6 +989,10 @@ input[type="file"] {
     z-index: 1001;
 }
 
+#buy-button a:hover {
+    text-decoration: none;
+}
+
 .buy-button-inner {
     line-height: 24px;
 }
