--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -1042,6 +1042,7 @@ input[type="file"] {
     border-bottom: 1px solid #D5D3C7;
     padding: 20px;
     text-align: center;
+    word-wrap: break-word;
 }
 
 .news-blogroll {
