--- a/growing_cities/templates/stories/story_list.html
+++ b/growing_cities/templates/stories/story_list.html
@@ -10,13 +10,21 @@
                 {% include "stories/_story_detail.html" %}
             </div>
 
+            {% if forloop.last %}
+                {% comment %}
+                Filler, unfortunately necessary since we're using table-cell
+                {% endcomment %}
+                {% if position == 'left' %}
+                <div class="grid-cell grid grid-1-3 middle"></div>
+                <div class="grid-cell grid grid-1-3 right"></div>
+                {% elif position == 'middle' %}
+                <div class="grid-cell grid grid-1-3 right"></div>
+                {% endif %}
+            {% endif %}
+
         {% if position == 'right' %}
         </div>
         {% endif %}
-
-        {% comment %}
-        TODO fill rows with less than three items
-        {% endcomment %}
 
     {% endfor %}
 </div>
