story list image dimensions

--- a/growing_cities/templates/stories/_story_detail.html
+++ b/growing_cities/templates/stories/_story_detail.html
@@ -1,10 +1,10 @@
-{% load videos_tags %}
+{% load imagekit videos_tags %}
 
 {% if story.video_url %}
     {{ story.video_url|embed_by_url:"100%,100%" }}
 {% elif story.image %}
     <a href="{{ story.get_absolute_url }}">
-        <img src="{{ story.thumbnail.url }}" />
+        {% generateimage "stories:listthumbnail" source=story.image -- alt=story.title title=story.title %}
     </a>
 {% else %}
     <p>{{ story.title }}</p>
