--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -104,7 +104,7 @@
         </ul>
         <ul>
             <li>
-                <a class="social-button rss" href="http://growingcitiesmovie.tumblr.com/" target="_blank"></a>
+                <a class="social-button tumblr" href="http://growingcitiesmovie.tumblr.com/" target="_blank"></a>
             </li>
         </ul>
     </div>
