--- a/growing_cities/templates/newsletter/form.html
+++ b/growing_cities/templates/newsletter/form.html
@@ -8,6 +8,6 @@
         </div>
         <div class="clear"></div>
     </div>
-    <input type="submit" value="Sign up" />
+    <button class="action-button action-button-submit action-button-submit-small newsletter-form-submit" type="submit">Submit</button>
     <div class="loading"></div>
 </form>
