leaflet mixin for max zoom when fitting bounds

--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -74,6 +74,7 @@
 
     <script src="{{ STATIC_URL }}js/jquery.addplaceform.js"></script>
     <script src="{{ STATIC_URL }}js/main.js"></script>
+    <script src="{{ STATIC_URL }}js/leaflet.boundszoom.js"></script>
     <script src="{{ STATIC_URL }}js/leaflet.offset.js"></script>
     <script src="{{ STATIC_URL }}js/leaflet.mapdrawer.js"></script>
     <script src="{{ STATIC_URL }}js/jquery.map.js"></script>
