--- a/growing_cities/templates/howtos/_howto_detail.html
+++ b/growing_cities/templates/howtos/_howto_detail.html
@@ -2,17 +2,18 @@
 
 <div>
     <div>
-    {% if howto.image %}
-        <a href="{{ howto.link }}" target="_blank">
-            {% generateimage "howtos:listthumbnail" source=howto.image -- alt=howto.title title=howto.title %}
-        </a>
-        <span class="howto-name">{{ howto.name }}</span>
-    {% elif howto.text %}
+
+        {% if not howto.image %}
         <div>{{ howto.text|safe }}</div>
+        {% endif %}
+
         <a href="{{ howto.link }}" target="_blank">
+            {% if howto.image %}
+            {% generateimage "howtos:listthumbnail" source=howto.image -- alt=howto.title title=howto.title %}
+            {% endif %}
             <span class="howto-name">{{ howto.name }}</span>
         </a>
-    {% endif %}
+
     </div>
 </div>
 
