--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -1370,7 +1370,8 @@ input[type="file"] {
 }
 
 #map .leaflet-popup-content {
-    margin: 40px;
+    margin: 0;
+    padding: 40px;
     text-align: center;
 }
 
