--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -87,6 +87,7 @@
 </head>
 <body class="{% block body_class %}{{ fiber_page.title|slugify }}{% endblock %}">
     <div id="application-pane-wrapper">
+
         <div id="social-buttons">
             <ul>
                 <li>
@@ -109,6 +110,12 @@
                 </li>
             </ul>
         </div>
+
+        <div id="map-creator-attribution">
+            <span class="meta">MAP BY</span>
+            <a class="name" href="http://596acres.org" target="_blank">596 ACRES</a>
+        </div>
+
         <div id="application-pane">
             <div>
 
